--- a/banananzas-back/wrangler.jsonc
+++ b/banananzas-back/wrangler.jsonc
@@ -2,7 +2,7 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "banananzas-back",
   "main": "src/index.ts",
-  "compatibility_date": "2025-08-04"
+  "compatibility_date": "2025-08-04",
   // "compatibility_flags": [
   //   "nodejs_compat"
   // ],
@@ -31,8 +31,8 @@
   // "ai": {
   //   "binding": "AI"
   // },
-  // "observability": {
-  //   "enabled": true,
-  //   "head_sampling_rate": 1
-  // }
+  "observability": {
+    "enabled": true,
+    "head_sampling_rate": 1
+  }
 }
